<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:text="Name:"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameUserProfile"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="28sp"
        app:layout_constraintStart_toEndOf="@+id/nameTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:text="Email:"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/emailUserProfile"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameUserProfile" />

    <RatingBar
        android:id="@+id/usersRatingBar"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize=".5"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toEndOf="@+id/userRatingTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailUserProfile" />

    <RatingBar
        android:id="@+id/usersNewRating"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toEndOf="@+id/rateUserTextView"
        app:layout_constraintTop_toBottomOf="@+id/fromText" />

    <TextView
        android:id="@+id/userRatingTextView"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <TextView
        android:id="@+id/rateUserTextView"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromText" />

    <ListView
        android:id="@+id/usersPostListView"
        android:layout_width="481dp"
        android:layout_height="414dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersPosts" />

    <TextView
        android:id="@+id/usersPosts"
        android:layout_width="480dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitRatingButton" />

    <TextView
        android:id="@+id/fromText"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="300dp"
        android:text="From"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersRatingBar" />

    <TextView
        android:id="@+id/ratedByTextView"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/fromText"
        app:layout_constraintTop_toBottomOf="@+id/usersRatingBar" />

    <TextView
        android:id="@+id/peopleText"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:text="people"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/ratedByTextView"
        app:layout_constraintTop_toBottomOf="@+id/usersRatingBar" />

    <Button
        android:id="@+id/submitRatingButton"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginStart="300dp"
        android:layout_marginLeft="300dp"
        android:text="Submit Rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersNewRating" />
</androidx.constraintlayout.widget.ConstraintLayout>