...
        android:text="@string/ownername"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/postedByView"
        app:layout_constraintTop_toBottomOf="@+id/institutionView" />

    <EditText
        android:id="@+id/ageView"
        android:layout_width="76dp"
        android:layout_height="55dp"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
...
        android:layout_marginBottom="60dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/okayButton"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
