...
        android:layout_marginTop="165dp"
        android:background="#F25022"
        android:text="Postings"
        android:textSize="20sp" />

    <Button
        android:id="@+id/myProfileButton"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/homepageUsernameTV"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="165dp"
...
